test/sparse/bradc/parIter/spsZipper2.good
spsZipper2.chpl:12: error: halt reached - Sparse domains can't be zippered with anything other than themselves and their arrays
